# rust-state-poc

./: .gitignore  .prettierrc  README.md  compose.yml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_missions_table.rs
src-tauri/migrations/: 0001_create_missions_table.sql  0002_create_vehicles_table.sql  0003_create_mission_stages_table.sql
src-tauri/old migration/src/: lib.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: stages.rs  testcmd.rs
src-tauri/src/stores/: mod.rs
src-tauri/src/stores/counter/: api.rs  mod.rs  types.rs
src-tauri/src/stores/form/: api.rs  types.rs
src-tauri/src/stores/mission/: api.rs  types.rs
src/components/: Count.vue  CreateMission.vue  Form.vue  Greet.vue  LocalCount.vue  SharedCount.vue  Stage.vue  TestMission.vue
src/lib/: bindings.ts
src/lib/zustand/: count.ts
src/stores/: FormStore.ts  LocalCountStore.ts  MissionStore.ts  SharedCountStore.ts  TestMissionStore.ts
