[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
taurpc = "0.3.0"
tokio = { version = "1.41.1", features = ["full"] }
specta = { version = "=2.0.0-rc.9", features = ["export", "typescript"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json" ] }
